...
            .background(MaterialTheme.colorScheme.primaryContainer),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {
        Image(
            painter = painterResource(id = R.drawable.paints),
            contentDescription = "P.a.i.n.t.s image",
            contentScale = ContentScale.Fit,
            modifier = Modifier
                .fillMaxWidth()
                .weight(1f)
                .background(MaterialTheme.colorScheme.primaryContainer), // Color.Purple
        )
...
            onClick = {
                navController.navigate(Screen.UserScreen.route+"/$userId" )
            },
        ) {
            Icon(
                imageVector = Icons.Default.Home,
                contentDescription = "Account Home"
            )
        }
    }
}

@Composable
...
            .clickable {
                onClick()
            }
    ) {
        Image(
            painter = icon,
            contentDescription = "AnimatedIconButtons",
            modifier = Modifier.fillMaxSize(),
        )
    }
}

@Composable
...
                    horizontalArrangement = Arrangement.SpaceBetween
                )
                {
                    Button(onClick = {myViewModel.updateLineStrokeCap(StrokeCap.Butt)}) {
                        Icon(
                            painterResource(id = R.drawable.baseline_butt_24),
                            contentDescription = "Butt Cap"
                        )
                    }
                    Button(onClick = {myViewModel.updateLineStrokeCap(StrokeCap.Square)}) {
                        Icon(
                            painterResource(id = R.drawable.baseline_square_24),
                            contentDescription = "Square Cap"
                        )
                    }
                    Button(onClick = {myViewModel.updateLineStrokeCap(StrokeCap.Round)}) {
                        Icon(
                            painterResource(id = R.drawable.baseline_circle_24),
                            contentDescription = "Round Cap"
                        )
                    }
                }
            }
        }
    }
...
